# neural

./: .gitignore  CMakeLists.txt  deep_feed_forward.cpp  deep_feed_forward.h  feed_forward.cpp  feed_forward.h  i_neural.h  main.cpp  painter.cpp  painter.h  perceptron.cpp  perceptron.h  perceptron2.cpp  perceptron2.h  sigmoid.cpp  sigmoid.h  teacher.cpp  teacher.h
